Uso de propiedad CSS overflow-wrap para resolver un problema

--- a/records-style.css
+++ b/records-style.css
@@ -133,6 +133,7 @@ main{
         " icon--plus--three .  icon--plus--four"
      ;
      padding: 30px 15px;
+     row-gap: 15px;
 }
 
 .plus1--circle{
@@ -219,6 +220,10 @@ main{
     font-size: 30px;
     -webkit-text-stroke: 2px black;
     text-shadow: 0px 5px 1px #6B90BD;
+}
+
+.player--record__signature{
+    overflow-wrap: anywhere;
 }
 
 .fa-clock{
@@ -444,7 +449,7 @@ main{
 
     .records--main__up h2{
         width: 250px;
-        font-size: 30px;
+        font-size: 28px;
         padding: 10px 30px;
         left: calc(50% - 125px);
         top: calc(0% - 50px);
@@ -463,7 +468,7 @@ main{
     }
 
     .player--record__signature, .player--record__record{
-        font-size: 25px;
+        font-size: 20px;
         -webkit-text-stroke: 1.5px black;
     }
 
@@ -481,11 +486,12 @@ main{
 
     .player--record__number{
         width: 40px;
-        font-size: 25px;
+        font-size: 20px;
         height: 40px;
         border: 3px solid #FCFAFE;
         -webkit-text-stroke: 1.5px black;
         border-radius: 10px;
+        padding-block-start: 5px;
     }
 
     /*Footer*/
